--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -7,7 +7,14 @@
   <title>Settings - fourteenkilobytes</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/admin/favicon-32x32.png">
   <link rel="stylesheet" href="/admin/style.css">
-  <script src="/admin/i18n.js"></script>
+  <link rel="modulepreload" href="/admin/i18n.js">
+  <link rel="modulepreload" href="/admin/app.js">
+  <link rel="modulepreload" href="/admin/lib/common.js">
+  <link rel="modulepreload" href="/admin/lib/css-utils.js">
+  <link rel="modulepreload" href="/admin/lib/byte-utils.js">
+  <link rel="modulepreload" href="/admin/lib/settings-utils.js">
+  <link rel="modulepreload" href="/admin/lib/content-utils.js">
+  <script type="module" src="/admin/i18n.js"></script>
 </head>
 
 <body>
