refactor: extract formatBytes() to byte-utils module - Add formatBytes() to byte-utils.js with 3 comprehensive tests - Import formatBytes in editor.html and settings.html - Remove duplicate formatBytes() definitions from both files - 4 lines of duplication eliminated across editor.html and settings.html - All 232 unit tests passing Benefits: - Single source of truth for byte formatting - Consistent German locale formatting across admin interface - Improved maintainability

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -451,6 +451,8 @@
     import { debounce, initAuthGuard, setupLogoutHandler, hideLoadingOverlay } from './lib/common.js';
     // Import editor core functions (data serialization/deserialization)
     import { inlineNodesToHtml, parseInlineNodes, selectorFromSourceBlock, serializeBlock } from './lib/editor-core.js';
+    // Import byte utilities
+    import { formatBytes } from './lib/byte-utils.js';
 
     // Declare early to avoid initialization order issues
     let debouncedPreview;
@@ -2820,10 +2822,6 @@
       }
 
       // ============ BYTE COUNTER & COST RAIL ============
-
-      function formatBytes(bytes) {
-        return bytes.toLocaleString('de-DE') + ' B';
-      }
 
       function updateByteCounter(totalBytes, overheadBytes = 0, contentBytes = null, breakdown = null) {
         const limit = 14336;
